--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,7 @@
     <string name="sync_status_unsynced">%d unsynced</string>
     <string name="nav_settings">Settings</string>
     <string name="nav_getting_started">Getting Started</string>
+    <string name="nav_invite_friends">Invite Friends</string>
     <string name="nav_about">About</string>
 
     <!--    Menus-->
