player stats radio button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -282,7 +282,7 @@
     <string name="games_tab_history">History</string>
     <string name="games_tab_charts">Charts</string>
     <string name="charts_tab_distribution">Scores</string>
-    <string name="charts_tab_trend">Over Time</string>
+    <string name="charts_tab_trend">Goal Difference</string>
     <string name="charts_goal_diff_distribution_title">Goal Difference Distribution</string>
     <string name="charts_goal_diff_distribution_description">Percentage of games ending with each score difference</string>
     <string name="charts_goal_diff_trend_title">Goal Difference Trend</string>
