Add Chemistry tab (Pairs, Triplets, Form) and Calibration charts
- New "Chemistry" tab in Insights between Stats and Competitiveness
- Power Pairs: top player duos sorted by wins-minus-losses (volume-weighted)
- Power Triplets: top 3-player combos with same scoring logic; cap both lists at 100
- Form Grid: recent-form grid split into "appeared in last 4 games" vs others,
  each sorted by win-loss success over last 10 games; cells in HorizontalScrollView
  to prevent clipping
- Win Rate vs Experience scatter chart: X = games played, Y = win rate,
  50% reference line; tap dot shows player panel with name / games / win% / grade
- Game filtering refactored to accept List<String> players (0–N) with a single
  unified DB query; multi-player queries filter to same-team games only
- Chemistry container tabs now use the same pill style as Competitiveness tabs
- Bug fixes: getColumnIndex >= 0 guard, explicit g.game_index alias in SQL,
  computeIfAbsent in TripletHelper, subList copied to ArrayList, split length guards,
  adapter context taken from holder view rather than fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,9 +301,42 @@
 
     <!--    Statistics Tab Charts-->
     <string name="stats_tab_stats">Stats</string>
-    <string name="stats_tab_charts">Charts</string>
+    <string name="stats_tab_charts">Competitiveness</string>
+    <string name="stats_tab_chemistry">Chemistry</string>
     <string name="stats_charts_tab_seniority">Experience</string>
     <string name="stats_charts_tab_success">Success</string>
+    <string name="stats_charts_tab_grade_vs_winrate">Calibration</string>
+
+    <!-- Chemistry container sub-tabs -->
+    <string name="chemistry_tab_pairs">Couples</string>
+    <string name="chemistry_tab_triplets">Triplets</string>
+    <string name="chemistry_tab_form">Form</string>
+
+    <string name="chemistry_toggle_all">All time</string>
+    <string name="chemistry_toggle_recent">Recent</string>
+
+    <!-- Triplets -->
+    <string name="pairs_title">Power Couples</string>
+    <string name="pairs_description">2-player combinations sorted by wins together.\nTap a row to see their games.</string>
+    <string name="pairs_no_data">Not enough data yet. Play more games so pairs appear together at least %1$d times.</string>
+    <string name="pairs_col_pair">Pair</string>
+    <string name="pairs_col_games">Games</string>
+    <string name="pairs_col_winrate">Win %</string>
+    <string name="triplets_title">Power Triplets</string>
+    <string name="triplets_description">3-player combinations sorted by win rate together.\nTap a row to see their games.</string>
+    <string name="triplets_no_data">Not enough data yet. Play more games so triplets appear together at least %1$d times.</string>
+
+    <!-- Form grid -->
+    <string name="form_grid_title">Recent Form</string>
+    <string name="form_grid_description">Last %1$d games per player.\nTap a row to see player details.</string>
+    <string name="form_grid_no_data">No game data yet.</string>
+    <string name="form_section_recent">Recent appearances</string>
+    <string name="form_section_others">Others</string>
+
+    <!-- Grade vs Win Rate -->
+    <string name="grade_winrate_title">Win Rate vs. Experience</string>
+    <string name="grade_winrate_description">Each dot is a player. Games played / win rate.\nTap a dot to see details.</string>
+    <string name="grade_winrate_no_data">Not enough data. Play at least %1$d games to see calibration.</string>
 
     <!--    Player Experience Distribution Chart-->
     <string name="stats_seniority_chart_title">Player Experience Distribution</string>
